--- a/application/clients/desktop/src/index.html
+++ b/application/clients/desktop/src/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="assets/css/tooltip.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/toastr.min.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/grapes.min.css" rel="stylesheet" type="text/css" />
