--- a/application/clients/desktop/src/index.html
+++ b/application/clients/desktop/src/index.html
@@ -15,6 +15,7 @@
   <link href="assets/css/grapes.min.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/gjs-grapedrop-preset.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/editor.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
