--- a/application/clients/desktop/src/index.html
+++ b/application/clients/desktop/src/index.html
@@ -16,11 +16,13 @@
   <link href="assets/css/gjs-grapedrop-preset.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/editor.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
 </head>
 
 <body>
   <app-root></app-root>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/js/bootstrap4-toggle.min.js"></script>
 </body>
 
 </html>
