new grapesjs version added

--- a/application/clients/desktop/src/index.html
+++ b/application/clients/desktop/src/index.html
@@ -10,11 +10,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="assets/css/tooltip.css" rel="stylesheet" type="text/css" />
+  <!-- <link href="assets/css/tooltip.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/toastr.min.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/grapes.min.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/gjs-grapedrop-preset.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/grapes.min.css" rel="stylesheet" type="text/css" /> -->
+  <!-- <link href="assets/css/gjs-grapedrop-preset.css" rel="stylesheet" type="text/css" /> -->
   <link href="assets/css/editor.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/grapesjs/dist/css/grapes.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
 </head>
@@ -23,6 +24,7 @@
   <app-root></app-root>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/js/bootstrap4-toggle.min.js"></script>
+  <script src="https://unpkg.com/grapesjs"></script>
 </body>
 
 </html>
