--- a/application/clients/desktop/src/index.html
+++ b/application/clients/desktop/src/index.html
@@ -15,7 +15,7 @@
   <link href="assets/css/grapes.min.css" rel="stylesheet" type="text/css" /> -->
   <!-- <link href="assets/css/gjs-grapedrop-preset.css" rel="stylesheet" type="text/css" /> -->
   <link href="assets/css/editor.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/grapesjs/dist/css/grapes.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/grapesjs@0.16.22/dist/css/grapes.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css"
     rel="stylesheet">
@@ -34,7 +34,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/grapesjs"></script>
+  <script src="https://unpkg.com/grapesjs@0.16.22/dist/grapes.min.js"></script>
 </body>
 
 </html>
