--- a/application/clients/desktopV2/src/index.html
+++ b/application/clients/desktopV2/src/index.html
@@ -6,7 +6,7 @@
     <title>Geppetto Builder</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/Geppetto_favicon.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
